# may10demo

./: Cargo.toml  README.md  config.json
src/: issueVc.rs  requestVc.rs
stronghold_path/test_strongholds/: 6u3NhbAZdbCCm6Y6VMDy5aFGcwsVEG0v.stronghold  CC3yDLVCWGYYUDiuOgAmU7UUyGrbPUhg.stronghold  NxCHEyzIbfyojH3mw0Ctcd9qgveLCzMT.stronghold  PEg3VArzL0T9eUU6RlG3IjjTjWsKPCAA.stronghold  XnPw1Zhs1W5tHF4gUqQCx4h9qLMm7Iu0.stronghold  iSN6rNiUmPM1hv6QaEHOAyMeTeLh7wBQ.stronghold
utils/: identitylib.rs  lib.rs  utils.rs
